fix resizing alignment bug for h2s on small screen size

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -81,7 +81,7 @@ about-page-row {
   }
 }
 
-.price-header {
+.about-price-header {
   margin-top: 20px;
   margin-bottom: 15px;
   text-align: center;
